<resources>
    <string name="language_code">eng</string>
    <string name="language_name">English</string>
    <string name="is_admin">true</string>
    <string name="is_user">true</string>
    <string name="app_name">GPSSample</string>
    <string name="cancel">CANCEL</string>
    <string name="signin">SIGN IN</string>
    <string name="share">SHARE</string>
    <string name="refresh">REFRESH</string>
    <string name="permission_toolbar_title">Permissions</string>
    <string name="welcome_title">Welcome to GPSSample</string>
    <string name="permission_description">GPSSample needs access to some basic system features in order to run.</string>
    <string name="permission_title_location">Current Location</string>
    <string name="permission_description_location">Allows GPSSample to record GPS coordinates during enumeration as well as provide navigation instructions.</string>
    <string name="permission_title_camera">Camera</string>
    <string name="permission_description_camera">Allows enumerators to take photos of areas for better identification and navigation. This feature can be disabled on the configuration level.</string>
    <string name="permission_title_wifi">WiFi Data Transfer</string>
    <string name="permission_description_wifi">Allows your device to sync GPSSample data and configurations with other devices on the network.</string>
    <string name="allow_all">ALLOW ALL TO CONTINUE</string>
    <string name="allow_continue">CONTINUE</string>
    <string name="alert_permission_not_all">All permissions are required.</string>
    <string name="alert_permission_action">ALLOW ALL</string>
    <string name="alert_permission_in_settings">You can change this permission in settings.</string>
    <string name="alert_permission_in_settings_negative">NEGATIVE</string>
    <string name="alert_permission_in_settings_positive">GO TO SETTINGS</string>
    <string name="config">Configuration</string>
    <string name="configs">Configurations</string>
    <string name="config_new">Create New Configuration</string>
    <string name="config_view">VIEW ALL CONFIGURATIONS</string>
    <string name="config_back">BACK</string>
    <string name="config_next">NEXT</string>
    <string name="config_done">DONE</string>
    <string name="config_count">There are currently %s configurations on this device.</string>
    <string name="config_count_zero">no</string>
    <string name="config_upload_explanation">To upload a configuration, connect your computer and this device to the same network and visit this address in your web browser:</string>
    <string name="config_all_toolbar_title">All Configurations</string>
    <string name="config_toolbar_title">New Configuration</string>
    <string name="config_name_title">Name This Configuration</string>
    <string name="config_name_explanation">This name is used to identify your configuration when sharing it to other devices as well as in the device configuration list.</string>
    <string name="config_name_hint">Configuration Name</string>
    <string name="config_name_duplicate_error">A configuration with this name already exists.</string>
    <string name="config_name_length_error_short">Configuration names must be at least four letters long.</string>
    <string name="config_name_length_error_long">Configuration names can be no longer than 32 letters.</string>
    <string name="config_upload_title">Upload Files</string>
    <string name="config_upload_files_explanation">Upload files for use in your configuration, such as  map data, geographical data,  icon files, and language files.</string>
    <string name="config_upload_load_file">LOAD FILE</string>
    <string name="config_upload_load_file_help">Upload a JSON file in the GeoJSON format. GPSSample will use the polygons in the file to define enumeration areas. See the Admin Guide for more details.</string>
    <string name="config_lang_title">Languages</string>
    <string name="config_lang_explanation">Select any languages you want to include with this configuration. Users will be able to choose from these languages in their settings.
If the file contains data for Admin as well, the language will be immediately accessible from the language overflow menu in the toolbar.</string>
    <string name="config_lang_list_title">Languages</string>
    <string name="config_lang_error_none">At least one language is required.</string>
    <string name="config_transfer_receiving_files">Receiving Files&#8230;</string>
    <string name="config_transfer_files_title">Uploaded Files</string>
    <string name="config_transfer_button">GET FILE FROM URL</string>
    <string name="config_transfer_explanation">To upload %s, connect your computer and this device to the same network and visit this address in your web browser:</string>
    <string name="config_transfer_default">files</string>
    <string name="config_list_empty">None</string>
    <string name="config_lang_admin">Admin</string>
    <string name="config_lang_user">Users</string>
    <string name="config_server_auth_title">Server Authentication</string>
    <string name="config_server_auth_description">Enter server information for uploads from supervisor devices.</string>
    <string name="config_server_type">Server Type</string>
    <string name="config_server_url">Server URL</string>
    <string name="config_server_user">Username</string>
    <string name="config_server_password">Password</string>
    <string name="config_upload_skip">SKIP THIS STEP</string>
    <string name="config_geography_title">Geography</string>
    <string name="config_geography_explanation">Define enumeration areas and their geographical boundaries. GPSSample will automatically download maps of the areas for offline use.</string>
    <string name="config_geography_quickstart">QUICK START</string>
    <string name="config_geography_quickstart_alternate">VIEW MAP</string>
    <string name="config_geography_quickstart_explanation">Quick Start lets you proceed with a single enumeration area by specifying a location and a radius for the map download.</string>
    <string name="config_enumeration_area_title">Enumeration Areas</string>
    <string name="config_geography_dialog_title">Get Enumeration Area</string>
    <string name="config_geography_dialog_latitude_hint">Latitude</string>
    <string name="config_geography_dialog_longitude_hint">Longitude</string>
    <string name="config_geography_dialog_cancel">CANCEL</string>
    <string name="config_geography_dialog_get_area">GET AREA</string>
    <string name="config_geography_dialog_radius_hint">Radius (km)</string>
    <string name="config_landmarks_title">Landmarks</string>
    <string name="config_landmarks_explanation">Upload landmark types to your maps to assist in navigation. Define custom icons for different types of landmarks.</string>
    <string name="config_landmarks_types">Landmark Types</string>
    <string name="config_landmarks_types_add">ADD LANDMARK TYPE</string>
    <string name="config_landmarks_skip">SKIP THIS STEP</string>
    <string name="config_landmarks_add_title">Add Landmark Type</string>
    <string name="config_add_save">SAVE</string>
    <string name="config_landmarks_add_hint">Landmark Type</string>
    <string name="config_landmarks_add_icon_title">Select Icon</string>
    <string name="config_landmarks_add_button">GET ICON FROM URL</string>
    <string name="config_landmarks_add_error">A landmark must both have a name and a selected icon before it can be saved.</string>
    <string name="config_fields_title">Enumeration Fields</string>
    <string name="config_fields_explanation">First, enter the enumeration subject for your study (default is households).</string>
    <string name="config_fields_explanation_2">Now, enter the fields for enumerators to populate for each of the %s.</string>
    <string name="config_fields_subject_error">Enumeration Subject must have a value.</string>
    <string name="config_fields_list_title">Fields</string>
    <string name="config_fields_description_automatic">Automatically Assigned (Non-editable)</string>
    <string name="config_fields_description_primary">Primary Label Text</string>
    <string name="config_fields_description_contains_pii">Contains PII</string>
    <string name="config_fields_add">ADD FIELD</string>
    <string name="config_fields_add_title">Create Field</string>
    <string name="config_fields_add_name_hint">Field Name</string>
    <string name="config_fields_add_key_hint">Custom Key (optional)</string>
    <string name="config_fields_add_dropdown_hint">Field Type</string>
    <string name="config_fields_add_dropdown_dialog_title">Add a Custom Key</string>
    <string name="config_fields_add_dropdown_dialog_hint">Key</string>
    <string name="config_fields_add_another">ADD ANOTHER</string>
    <string name="config_fields_add_pii">Personally Identifiable Information</string>
    <string name="config_fields_add_required">Required</string>
    <string name="config_fields_add_integer_only">Integer Only</string>
    <string name="config_fields_add_date_explanation">Date and time formats will be specified later in configuration.</string>
    <string name="config_fields_add_date_date">Date</string>
    <string name="config_fields_add_date_time">Date with Time</string>
    <string name="config_fields_add_date_date_time">Time</string>
    <string name="config_fields_add_default_time_text">Default to current date and time</string>
    <string name="config_display_title">Display Preferences</string>
    <string name="config_display_explanation">Enter default display information.</string>
    <string name="config_display_default_language">Default Language</string>
    <string name="config_display_date_format">Date Format</string>
    <string name="config_display_time_format">Time Format</string>
    <string name="config_user_settings_title">User Settings</string>
    <string name="config_user_settings_explanation">Define settings and permissions for enumerators and supervisors using this configuration.</string>
    <string name="config_sampling_title">Sampling Method</string>
    <string name="config_sampling_explanation">Select the statistical method to use when generating your sample.</string>
    <string name="collect_duplicate_gps_title">Reuse Last Recorded GPS?</string>
    <string name="collect_duplicate_gps_dialog">This will lock the GPS location for this point at the same coordinates as your last %s (\"%s\") at %s, %s. Are you sure?</string>
    <string name="use_last_recorded">USE LAST RECORDED</string>
    <string name="percentage">Percentage</string>
    <string name="fixed">Fixed</string>
    <string name="save">SAVE</string>
    <string name="add_subset">Add Subset</string>
    <string name="close">close</string>
    <string name="all">All</string>
    <string name="any">Any</string>
    <string name="delete_subset">DELETE SUBSET</string>
    <string name="subset_name">Subset Name</string>
    <string name="rules">Rules</string>
    <string name="add_new_rule">ADD NEW RULE</string>
    <string name="sample_grouping">Sample Grouping</string>
    <string name="subsets_may_overlap">Subsets: may overlap</string>
    <string name="strata_mutually_exclusive">Strata: Mutually Exclusive</string>
    <string name="none_sample_from_all">None: sample from all</string>
    <string name="define_groupings_and_their_sizes_on_the_next_screen">Define groupings and their sizes on the next screen.</string>
    <string name="sample_strata">Sample Strata</string>
    <string name="sample_strata_explanation">Define any strata and their sizes in terms of a fixed number of households or a percentage of all collected households matching the strata rules.</string>
    <string name="add_strata">ADD STRATA</string>
    <string name="delete_item_title">Delete</string>
    <string name="delete_item_message">Are you sure you want to permanently delete this %s?</string>
    <string name="delete">DELETE</string>
</resources>