<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="org.taskforce.episample.config.sampling.filter.RuleSetCreationViewModel"/>
    </data>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/colorPrimary"
                android:elevation="8dp"
                android:paddingEnd="8dp"
                android:paddingStart="24dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/icon_close_white"
                        android:contentDescription="@string/close"
                        android:onClick="@{vm.closePressed}"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="24dp"
                        android:text="@string/add_subset"
                        android:textColor="@color/textColorInverse"
                        android:textStyle="bold"
                        tools:ignore="RtlHardcoded"/>

                    <android.support.v4.widget.Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:enabled="@{vm.isSaveEnabled}"
                        android:onClick="@{vm.savePressed}"
                        android:text="@string/save"
                        android:textColor="@color/disableable_toolbar_text_color"/>
                </LinearLayout>
            </Toolbar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="24dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:text="@={vm.name}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/subset_name"
                        android:textSize="16sp"/>
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/rules"
                        android:textColor="@color/textColorDetails"
                        android:textStyle="bold"/>

                    <ToggleButton
                        style="@style/AppTheme.Sampling.ToggleButton.Grey"
                        android:checked="@={vm.isAnyChecked}"
                        android:onClick="@{vm.anyCheckedChanged}"
                        android:textOff="@string/any"
                        android:textOn="@string/any"/>

                    <ToggleButton
                        style="@style/AppTheme.Sampling.ToggleButton.Grey"
                        android:checked="@={!vm.isAnyChecked}"
                        android:onClick="@{vm.allCheckedChanged}"
                        android:textOff="@string/all"
                        android:textOn="@string/all"
                        tools:checked="true"/>
                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/ruleRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:itemCount="1"
                    tools:listitem="@layout/item_rule_assembler">

                </android.support.v7.widget.RecyclerView>

                <TextView
                    android:onClick="@{vm.addRulePressed}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/add_new_rule"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:text="@string/delete_subset"
                    android:textColor="@color/colorError"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>