<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
        name="vm"
        type="org.taskforce.episample.collection.viewmodels.DeleteItemDialogViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <TextView
            android:id="@+id/deleteItemTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{vm.title}"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="@string/delete_item_title" />

        <TextView
            android:id="@+id/deleteItemMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@{vm.message}"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deleteItemTitle"
            tools:text="@string/delete_item_message" />

        <TextView
            android:id="@+id/deleteItemDeleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:onClick="@{() -> vm.confirmDelete()}"
            android:text="@{vm.deleteButtonText}"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deleteItemMessage"
            tools:text="@string/delete" />

        <TextView
            android:id="@+id/deleteItemCancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:onClick="@{() -> vm.cancel()}"
            android:text="@{vm.cancelButtonText}"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/deleteItemDeleteButton"
            app:layout_constraintEnd_toStartOf="@+id/deleteItemDeleteButton"
            app:layout_constraintTop_toTopOf="@+id/deleteItemDeleteButton"
            tools:text="@string/cancel" />
    </android.support.constraint.ConstraintLayout>
</layout>